--- a/app/about-us.html
+++ b/app/about-us.html
@@ -778,11 +778,10 @@
         </section>
         <!-- testimonial -->
       
-    </section>
     <section>
       <div class="container">
           <h6 class="small-grey-text text-center mt-3">Trusted by</h6>
-          <div class="trusted-by-carousel">
+          <div class="trusted-by-carousel row">
             <img src="images/trusted/1.png" alt="">
             <img src="images/trusted/2.png" alt="">
             <img src="images/trusted/3.png" alt="">
