--- a/app/advice-center.html
+++ b/app/advice-center.html
@@ -127,19 +127,8 @@
               <a href="/shortlisted-northern.html" class="btn btn-orange">Learn more</a>
             </div>
           </div>
-          <div class="col-12 col-lg-6 service-item seo ppc cro">
-            <a href="#"><figure class="left"><div class="bg-black"></div>
-              <img src="images/case-studies/russums.jpg" alt="">
-            </figure></a>
-            <div class="service-text">
-              <span class="small-grey-text">SEO, PPC, CRO | Posted 1.09.2017</span>
-              <h3>The impact of Digital Marketing in a Crowded Market </h3>
-              <p class="description">Case study: Negligence Claimline. It’s easy to forget about the most important people in a marketing strategy – your potential clients!</p>
-              <a href="#" class="btn btn-orange">Learn more</a>
-            </div>
-          </div>
-          <div class="col-12 col-lg-6 service-item offset-top news">
-            <a href="/celebrating.html"><figure class="right"><div class="bg-black"></div>
+          <div class="col-12 col-lg-6 service-item news">
+            <a href="/celebrating.html"><figure class="left"><div class="bg-black"></div>
               <img src="images/case-studies/CMD.jpg">
             </figure></a>
             <div class="service-text">
@@ -149,8 +138,8 @@
               <a href="/celebrating.html" class="btn btn-orange">Learn more</a>
             </div>
           </div>
-          <div class="col-12 col-lg-6 service-item news">
-            <a href="/shortlisted-european.html"><figure class="left"><div class="bg-black"></div>
+          <div class="col-12 col-lg-6 service-item offset-top news">
+            <a href="/shortlisted-european.html"><figure class="right"><div class="bg-black"></div>
               <img src="images/case-studies/oarigin-global-bg.jpg" alt="">
             </figure></a>
             <div class="service-text">
@@ -160,8 +149,8 @@
               <a href="/shortlisted-european.html" class="btn btn-orange">Learn more</a>
             </div>
           </div>
-          <div class="col-12 col-lg-6 service-item offset-top seo ppc">
-            <a href="/drum.html"><figure class="right"><div class="bg-black"></div>
+          <div class="col-12 col-lg-6 service-item news">
+            <a href="/drum.html"><figure class="left"><div class="bg-black"></div>
               <img src="images/case-studies/oarigin-global-bg.jpg" alt="">
             </figure></a>
             <div class="service-text">
@@ -175,7 +164,7 @@
       </div>
     </section>
 
-    <section>
+<!--     <section>
       <div class="container">
         <div class="row justify-content-center pagination">
           <nav aria-label="Page navigation example">
@@ -199,7 +188,7 @@
           </nav>
         </div>
       </div>
-    </section>
+    </section> -->
 
 
 
