--- a/app/agencies.html
+++ b/app/agencies.html
@@ -73,7 +73,7 @@
           <div class="container p-absolute">
             <div class="service-content text-center">
               <div class="breadcrumbs small-grey-text">Home <span class="arrow">></span> Agency</div>
-              <h2>Agency Partnership</h2>
+              <h2>Agency Partnerships</h2>
               
             </div>
           </div>
@@ -88,10 +88,10 @@
           <div class="row justify-content-md-center">
             <div class="col-12 col-lg-6 centered column bordered">
               <h3 class="mb-5">We can work white label or directly as a partnership to suit your preferences</h3>
-                <p class="grey dash-before">We’ll work closely with you to win more clients, more business and build your reputation further.</p>
+                <p class="dash-before text-left">We’ll work closely with you to win more clients, more business and build your reputation further.</p>
               </div>
               <div class="col-12 col-lg-6 centered column">
-                <h3>What can we do for your business</h3>
+                <h3>What can we do for your business?</h3>
                 <a href="#" class="d-inline-block btn btn-orange">Get in touch</a>
               </div>
             </div>
@@ -126,17 +126,17 @@
             </div>
             <div class="row">
               <div class="col-12 col-md-4">
-                <img src="images/bulb-icon.png" alt="" class="icon">
+                <img src="images/icons/ppc.png" alt="" class="icon">
                 <h4>Pay per click advertising</h4>
                 <p>Your clients can enjoy the best possible return on their PPC investment with highly targeted campaigns and ongoing support from dedicated account managers.</p>
               </div>
               <div class="col-12 col-md-4">
-                <img src="images/bulb-icon.png" alt="" class="icon">
+                <img src="images/icons/seo.png" alt="" class="icon">
                 <h4>Search Engine optimisation</h4>
                 <p>From one-off campaigns to long term projects, your clients can enjoy better return from organic search with our tried and tested SEO strategies. </p>
               </div>
               <div class="col-12 col-md-4">
-                <img src="images/bulb-icon.png" alt="" class="icon">
+                <img src="images/icons/cro.png" alt="" class="icon">
                 <h4>Conversion Rate Optimisation</h4>
                 <p>Increase your client’s conversion rate with full website audits and techniques aimed at increasing their enquiries from the same level of traffic. </p>
               </div>
@@ -158,27 +158,27 @@
               <div class="row">
 
                 <div class="col-6 col-lg-4">
-                  <img src="images/bulb-icon.png" alt="" class="icon">
+                  <img src="images/icons/reporting.png" alt="" class="icon">
                   <h5>Reporting</h5>
                 </div>
                 <div class="col-6 col-lg-4">
-                  <img src="images/bulb-icon.png" alt="" class="icon">
+                  <img src="images/icons/consulting.png" alt="" class="icon">
                   <h5>Consulting</h5>
                 </div>
                 <div class="col-6 col-lg-4">
-                  <img src="images/bulb-icon.png" alt="" class="icon">
+                  <img src="images/icons/expertise.png" alt="" class="icon">
                   <h5>Expertise</h5>
                 </div>
                 <div class="col-6 col-lg-4">
-                  <img src="images/bulb-icon.png" alt="" class="icon">
+                  <img src="images/icons/ongoing.png" alt="" class="icon">
                   <h5>Ongoing Optimisation</h5>
                 </div>
                 <div class="col-6 col-lg-4">
-                  <img src="images/bulb-icon.png" alt="" class="icon">
+                  <img src="images/icons/clear.png" alt="" class="icon">
                   <h5>Clear, measurable strategy</h5>
                 </div>
                 <div class="col-6 col-lg-4">
-                  <img src="images/bulb-icon.png" alt="" class="icon">
+                  <img src="images/icons/up.png" alt="" class="icon">
                   <h5>Up-do-date industry knowledge</h5>
                 </div>
                 </div>
