--- a/app/captain-cover.html
+++ b/app/captain-cover.html
@@ -70,7 +70,7 @@
           <div class="bg-black"></div>
           <figure><img class="cover img-fluid" src="images/case-studies/captain-cover.jpg" alt=""></figure>
           <div class="container p-absolute">
-            <div class="service-content text-center">
+            <div class="service-content text-center"><a class="breadcrumbs small-grey-text" href="/work.html">&lt; Back to Our Work</a>
               <h2>Captain Cover </h2>
             </div>
           </div>
@@ -85,10 +85,10 @@
           <div class="row justify-content-md-center">
             <div class="col-12 col-lg-6 centered column bordered">
               <h3 class="mb-5">162% increase in conversion rate</h3>
-                <p class="grey dash-before">Captain Cover is a trading style of Lexelle Ltd. and provides insurance products to direct consumers online. The lifestyle brand is focussed on mobile electronic equipment - smartphones, tablets, and laptops.</p>
+                <p class="dash-before text-left">Captain Cover is a trading style of Lexelle Ltd. and provides insurance products to direct consumers online. The lifestyle brand is focussed on mobile electronic equipment - smartphones, tablets, and laptops.</p>
               </div>
               <div class="col-12 col-lg-6 centered column">
-                <h3>What can we do for your business</h3>
+                <h3>What can we do for your business?</h3>
                 <a href="#" class="d-inline-block btn btn-orange">Get in touch</a>
               </div>
             </div>
@@ -101,7 +101,7 @@
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-11 col-sm-10 col-md-8 center-vert">
-                <h3 class="case-title">Pains?</h3>
+                <h3 class="case-title">Pains</h3>
                 <ul class="description">
                   <li>A cost per lead higher than the target by 50%</li>
                   <li>Number of conversions and PPC revenue below target </li>
@@ -116,7 +116,7 @@
         <section class="solution testimonial">
           <div class="container">
           <div class="row no-gutters justify-content-center">
-              <div class="col-11 col-sm-10 col-md-8">
+              <div class="col-11 col-sm-10">
                 <p>“Ignition Search have supported our digital marketing strategy with clear objectives, in-depth analyses and valuable expertise. They have always delivered on time, within budget and with a strong focus on performance.” </p>
                 <p class="author"><strong>Sharon West, </strong>Managing Director at Lexelle/Captain Cover</p>
               </div>
