--- a/app/cmd.html
+++ b/app/cmd.html
@@ -70,7 +70,7 @@
           <div class="bg-black"></div>
           <figure><img class="cover img-fluid" src="images/case-studies/cmd.jpg" alt=""></figure>
           <div class="container p-absolute">
-            <div class="service-content text-center">
+            <div class="service-content text-center"><a class="breadcrumbs small-grey-text" href="/work.html">&lt; Back to Our Work</a>
               <h2>CMD</h2>
             </div>
           </div>
@@ -85,10 +85,10 @@
           <div class="row justify-content-md-center">
             <div class="col-12 col-lg-6 centered column bordered">
               <h3 class="mb-5">Maintaining and raising the company’s online profile throughout a rebranding process</h3>
-                <p class="grey dash-before">CMD pro¬vide a range of under¬floor power sys¬tems, light¬ing and power bus¬bars, light¬ing con¬trol sys¬tems as well as office power, cable man¬age¬ment and ergonomic solu¬tions.</p>
+                <p class="dash-before text-left">CMD pro¬vide a range of under¬floor power sys¬tems, light¬ing and power bus¬bars, light¬ing con¬trol sys¬tems as well as office power, cable man¬age¬ment and ergonomic solu¬tions.</p>
               </div>
               <div class="col-12 col-lg-6 centered column">
-                <h3>What can we do for your business</h3>
+                <h3>What can we do for your business?</h3>
                 <a href="#" class="d-inline-block btn btn-orange">Get in touch</a>
               </div>
             </div>
@@ -101,7 +101,7 @@
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-11 col-sm-10 col-md-8 center-vert">
-                <h3 class="case-title">Pains?</h3>
+                <h3 class="case-title">Pains</h3>
                 <p>With 3 satellite websites, all heavily focused around specific themes CMD commissioned a web design agency to create a new, all-encompassing website for consistency purposes.  As a collaborative effort, the client tasked Ignition Search with maintaining their traffic streams throughout the rebranding process whilst raising their online profile through online media relations and customer led, high quality content. </p>
               </div>
             </div>
