--- a/app/datatrack-labs.html
+++ b/app/datatrack-labs.html
@@ -70,8 +70,8 @@
           <div class="bg-black"></div>
           <figure><img class="cover img-fluid" src="images/case-studies/datatrack-labs.jpg" alt=""></figure>
           <div class="container p-absolute">
-            <div class="service-content text-center">
-              <h2>Datatrack Labs – Conversion Rate Optimisation & PPC Case study </h2>
+            <div class="service-content text-center"><a class="breadcrumbs small-grey-text" href="/work.html">&lt; Back to Our Work</a>
+              <h2>Datatrack Labs</h2>
             </div>
           </div>
         </div>
@@ -85,10 +85,10 @@
           <div class="row justify-content-md-center">
             <div class="col-12 col-lg-6 centered column bordered">
               <h3 class="mb-5">887.50% YOY increase in goal completions</h3>
-                <p class="grey dash-before">DataTrack Labs offer industry leading technological solutions and multiple service options for Hard Drive Data Recovery. </p>
+                <p class="dash-before text-left">DataTrack Labs offer industry leading technological solutions and multiple service options for Hard Drive Data Recovery. </p>
               </div>
               <div class="col-12 col-lg-6 centered column">
-                <h3>What can we do for your business</h3>
+                <h3>What can we do for your business?</h3>
                 <a href="#" class="d-inline-block btn btn-orange">Get in touch</a>
               </div>
             </div>
@@ -101,7 +101,7 @@
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-11 col-sm-10 col-md-8 center-vert">
-                <h3 class="case-title">Pains?</h3>
+                <h3 class="case-title">Pains</h3>
                 <ul>
                   <li>Unsuccessful in-house Ad campaigns </li>
                   <li>Limited PPC budget</li>
