--- a/app/jackson-woodturners.html
+++ b/app/jackson-woodturners.html
@@ -70,7 +70,7 @@
           <div class="bg-black"></div>
           <figure><img class="cover img-fluid" src="images/case-studies/jackson.jpg" alt=""></figure>
           <div class="container p-absolute">
-            <div class="service-content text-center">
+            <div class="service-content text-center"><a class="breadcrumbs small-grey-text" href="/work.html">&lt; Back to Our Work</a>
               <h2>jackson Woodturners</h2>
             </div>
           </div>
@@ -85,10 +85,10 @@
           <div class="row justify-content-md-center">
             <div class="col-12 col-lg-6 centered column bordered">
               <h3 class="mb-5">ROI of £19.44 for every pound spent in AdWords. </h3>
-                <p class="grey dash-before">Jackson Woodturners is a traditional and contemporary stair parts company offering a range of materials including oak, pine, glass and fusion. In early 2014, the company chose Ignition Search to power growth through its digital channels, focussing on paid and organic search</p>
+                <p class="dash-before text-left">Jackson Woodturners is a traditional and contemporary stair parts company offering a range of materials including oak, pine, glass and fusion. In early 2014, the company chose Ignition Search to power growth through its digital channels, focussing on paid and organic search</p>
               </div>
               <div class="col-12 col-lg-6 centered column">
-                <h3>What can we do for your business</h3>
+                <h3>What can we do for your business?</h3>
                 <a href="#" class="d-inline-block btn btn-orange">Get in touch</a>
               </div>
             </div>
@@ -101,7 +101,7 @@
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-11 col-sm-10 col-md-8 center-vert">
-                <h3 class="case-title">Pains?</h3>
+                <h3 class="case-title">Pains</h3>
                 <ul class="description">
                   <li>Lack of strategy from incumbent agency </li>
                   <li>Low return on investment </li>
@@ -116,7 +116,7 @@
         <section class="solution testimonial">
           <div class="container">
           <div class="row no-gutters justify-content-center">
-              <div class="col-11 col-sm-10 col-md-8">
+              <div class="col-11 col-sm-10">
                 <p>“We have been more than happy with the work and results we are achieving with Ignition. They are a highly skilled team who are committed to helping us move our business forward. Our ROI continues to grow month on month and we look forward to continuing our successful relationship with Ignition.” </p>
                 <p class="author"><strong>Lucie Jackson, </strong> owner of Jackson Woodturners</p>
               </div>
