--- a/app/kitlocker.html
+++ b/app/kitlocker.html
@@ -70,7 +70,7 @@
           <div class="bg-black"></div>
           <figure><img class="cover img-fluid" src="images/case-studies/kitlocker.jpg" alt=""></figure>
           <div class="container p-absolute">
-            <div class="service-content text-center">
+            <div class="service-content text-center"><a class="breadcrumbs small-grey-text" href="/work.html">&lt; Back to Our Work</a>
               <h2>Kitlocker</h2>
             </div>
           </div>
@@ -85,10 +85,10 @@
           <div class="row justify-content-md-center">
             <div class="col-12 col-lg-6 centered column bordered">
               <h3 class="mb-5">286% increase in ecommerce revenue.</h3>
-                <p class="grey dash-before">Kitlocker is an online sportswear and equipment company which specialises in providing teamwear and bespoke kit customisation. It enlisted our services to help increase its online presence and claim a precious spot in a saturated market.  </p>
+                <p class="dash-before text-left">Kitlocker is an online sportswear and equipment company which specialises in providing teamwear and bespoke kit customisation. It enlisted our services to help increase its online presence and claim a precious spot in a saturated market.  </p>
               </div>
               <div class="col-12 col-lg-6 centered column">
-                <h3>What can we do for your business</h3>
+                <h3>What can we do for your business?</h3>
                 <a href="#" class="d-inline-block btn btn-orange">Get in touch</a>
               </div>
             </div>
@@ -101,7 +101,7 @@
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-11 col-sm-10 col-md-8 center-vert">
-                <h3 class="case-title">Pains?</h3>
+                <h3 class="case-title">Pains</h3>
                 <ul class="description">
                   <li>Underperforming online strategy </li>
                   <li>Low brand exposure</li>
@@ -117,7 +117,7 @@
         <section class="solution testimonial">
           <div class="container">
           <div class="row no-gutters justify-content-center">
-              <div class="col-11 col-sm-10 col-md-8">
+              <div class="col-11 col-sm-10">
                 <p>"Our ecommerce was treading water until Ignition sorted out our account and trebled the conversion rate. They've been trustworthy, helpful and reliable; they've got our best interests at heart and I can't recommend them enough."</p>
                 <p class="author"><strong>Mike Kent,, </strong> Managing Director, Kitlocker</p>
               </div>
