--- a/app/ppc.html
+++ b/app/ppc.html
@@ -69,6 +69,7 @@
           <figure><img class="cover img-fluid" src="images/services/ppc.jpg" alt=""></figure>
           <div class="container p-absolute">
             <div class="service-content text-center">
+              <a class="breadcrumbs small-grey-text" href="/services.html">&lt; Back to services</a>
               <h1>Pay Per Click</h1>
               
             </div>
@@ -86,10 +87,10 @@
           <div class="row justify-content-md-center">
             <div class="col-12 col-lg-6 centered column bordered">
               <h4 class="mb-5 text-left">Improve your conversion rate and directly improve your return on investment from paid advertising. </h4>
-                <p class="grey dash-before">Delivering customers instantly. Bring targeted visitors each day, every day.</p>
+                <p class="dash-before">Delivering customers instantly. Bring targeted visitors each day, every day.</p>
               </div>
               <div class="col-12 col-lg-6 centered pr-0">
-                <h3 class="mr-3">What can we do for your business</h3>
+                <h3 class="mr-3">What can we do for your business?</h3>
                 <a href="/portfolio.html" class="d-inline-block btn btn-orange">Get in touch</a>
               </div>
             </div>
