--- a/app/pretty-green.html
+++ b/app/pretty-green.html
@@ -70,7 +70,7 @@
           <div class="bg-black"></div>
           <figure><img class="cover img-fluid" src="images/case-studies/pretty-green.jpg" alt=""></figure>
           <div class="container p-absolute">
-            <div class="service-content text-center">
+            <div class="service-content text-center"><a class="breadcrumbs small-grey-text" href="/work.html">&lt; Back to Our Work</a>
               <h2>Pretty Green</h2>
             </div>
           </div>
@@ -85,10 +85,10 @@
           <div class="row justify-content-md-center">
             <div class="col-12 col-lg-6 centered column bordered">
               <h3 class="mb-5">£1 million return from £45k </h3>
-                <p class="grey dash-before">Pretty Green is a men’s fashion brand that is intrinsically connected to the music scene, uniting people through a love of music and fashion. When a decision was made to begin advertising across international territories and gain maximum revenue from new collections and sale events across online and in-store traffic, the company turned to Ignition Search for a full optimisation of its AdWords account structure. </p>
+                <p class="dash-before text-left">Pretty Green is a men’s fashion brand that is intrinsically connected to the music scene, uniting people through a love of music and fashion. When a decision was made to begin advertising across international territories and gain maximum revenue from new collections and sale events across online and in-store traffic, the company turned to Ignition Search for a full optimisation of its AdWords account structure. </p>
               </div>
               <div class="col-12 col-lg-6 centered column">
-                <h3>What can we do for your business</h3>
+                <h3>What can we do for your business?</h3>
                 <a href="#" class="d-inline-block btn btn-orange">Get in touch</a>
               </div>
             </div>
@@ -101,7 +101,7 @@
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-11 col-sm-10 col-md-8 center-vert">
-                <h3 class="case-title">Pains?</h3>
+                <h3 class="case-title">Pains</h3>
                 <ul class="description">
                   <li>Search impression share below target</li>
                   <li>Low non-branded search conversion rates </li>
@@ -117,7 +117,7 @@
         <section class="solution testimonial">
           <div class="container">
           <div class="row no-gutters justify-content-center">
-              <div class="col-11 col-sm-10 col-md-8">
+              <div class="col-11 col-sm-10">
                 <p>“Ignition Search steered our paid search strategy with clear objectives and invaluable expertise. With the focus on Return on Investment, they increased both branded and non-branded online conversions to record levels. Their ability to greatly improve the quality of the product feed, was a key factor in our success. As a result of their performance, we are now rolling out online shopping on an international scale.”</p>
                 <p class="author"><strong>Robert Perry, </strong> Digital Manager, Pretty Green </p>
               </div>
