--- a/app/russums.html
+++ b/app/russums.html
@@ -70,7 +70,7 @@
           <div class="bg-black"></div>
           <figure><img class="cover img-fluid" src="images/case-studies/russums.jpg" alt=""></figure>
           <div class="container p-absolute">
-            <div class="service-content text-center">
+            <div class="service-content text-center"><a class="breadcrumbs small-grey-text" href="/work.html">&lt; Back to Our Work</a>
               <h2>Russums</h2>
             </div>
           </div>
@@ -85,10 +85,10 @@
           <div class="row justify-content-md-center">
             <div class="col-12 col-lg-6 centered column bordered">
               <h3 class="mb-5">Delivering 25% increase year – on – year in organic traffic</h3>
-                <p class="grey dash-before">Russums is a family run business focusing on catering clothing and kitchen supplies for the hospitality industry. Trying to recover from a Google Penalty, they engaged our services to create a relevant and compelling content strategy geared towards specific audience groups.</p>
+                <p class="dash-before text-left">Russums is a family run business focusing on catering clothing and kitchen supplies for the hospitality industry. Trying to recover from a Google Penalty, they engaged our services to create a relevant and compelling content strategy geared towards specific audience groups.</p>
               </div>
               <div class="col-12 col-lg-6 centered column">
-                <h3>What can we do for your business</h3>
+                <h3>What can we do for your business?</h3>
                 <a href="#" class="d-inline-block btn btn-orange">Get in touch</a>
               </div>
             </div>
@@ -101,7 +101,7 @@
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-11 col-sm-10 col-md-8 center-vert">
-                <h3 class="case-title">Why?</h3>
+                <h3 class="case-title">Pains</h3>
                 <ul class="description">
                   <li>Sudden drop in organic traffic </li>
                   <li>Low organic visibility for main keywords</li>
@@ -133,13 +133,13 @@
             <div class="row justify-content-center">
               <div class="col-12">
                 <h3>Pleasures</h3>
+                <ul class="description">
+                  <li>Organic traffic increased by 25% YOY</li>
+                  <li>Ecommerce revenue increased by 17.8% YOY </li>
+                  <li>Increased organic traffic for top keywords </li>
+                </ul>
               </div>
             </div>
-              <div class="row justify-content-center">
-                <p>Organic traffic increased by 25% YOY</p>
-                <p>Ecommerce revenue increased by 17.8% YOY </p>
-                <p>Increased organic traffic for top keywords </p>
-              </div>
               <div class="row justify-content-center">
               <div class="col-12 traffic">
                 <div class="row no-gutters">
@@ -194,34 +194,6 @@
         </section>
 
         <!-- outcomes -->
-
-        <section class="case-examples">
-            <div class="row no-gutters">
-              <div class="col-12 col-md-6">
-                <a href="/origin-global.html">
-                  <div class="bg-grey"></div>
-                <img src="images/service/origin-global.jpg" alt="" class="img-fluid">
-                <div class="centered-absolute">
-                  <span class="title small-grey-text">Origin Global</span>
-                  <h3>Driving the business forward following a complex Google penalty</h3>
-                </div>
-                </a>
-              </div>
-              <div class="col-12 col-md-6">
-                <a href="/russums.html">
-                  <div class="bg-grey"></div>
-                <img src="images/service/russums.jpg" alt="" class="img-fluid">
-                <div class="centered-absolute">
-                  <span class="title small-grey-text">Russums </span>
-                  <h3>Delivering 25% increase year- on – year in organic traffic</h3>
-                </div>
-                </a>
-              </div>
-
-            </div>
-        </section>
-
-
 
         <section class="contact pb-0">
     <h2 class="fade-out">Contact</h2>
