--- a/app/seo.html
+++ b/app/seo.html
@@ -69,12 +69,13 @@
           <figure><img class="cover img-fluid" src="images/services/seo.jpg" alt=""></figure>
           <div class="container p-absolute">
             <div class="service-content text-center">
+              <a class="breadcrumbs small-grey-text" href="/services.html">&lt; Back to services</a>
               <h1>Search Engine Optimisation</h1>
               
             </div>
           </div>
-          <a href="#" class="btn btn-back btn-transparent d-none d-lg-block">← <span class="with-content">Learn more about CRO</span> </a>
-          <a href="/service.html" class="btn btn-learn-more-right btn-transparent d-none d-lg-block"><span class="with-content">Learn more about PPC</span> →</a>
+          <a href="/cro.html" class="btn btn-back btn-transparent d-none d-lg-block">← <span class="with-content">Learn more about CRO</span> </a>
+          <a href="/ppc.html" class="btn btn-learn-more-right btn-transparent d-none d-lg-block"><span class="with-content">Learn more about PPC</span> →</a>
         </div>
         <div class="scroll-for-more centered"><span>Scroll <br/> for more</span></div>
       </header>
@@ -86,10 +87,10 @@
           <div class="row justify-content-md-center">
             <div class="col-12 col-lg-6 centered column bordered">
               <h4 class="mb-5 text-left">Increase your website visibility through high quality content production and originally researched link building ideas. </h4>
-                <p class="grey dash-before">Give your customers expert content, grow your brand and Google visibility</p>
+                <p class="dash-before">Give your customers expert content, grow your brand and Google visibility</p>
               </div>
               <div class="col-12 col-lg-6 centered pr-0">
-                <h3 class="mr-3">What can we do for your business</h3>
+                <h3 class="mr-3">What can we do for your business?</h3>
                 <a href="/portfolio.html" class="d-inline-block btn btn-orange">Get in touch</a>
               </div>
             </div>
