--- a/app/service.html
+++ b/app/service.html
@@ -88,7 +88,7 @@
                 <p class="grey dash-before">Give your customers expert content, grow your brand and Google visibility</p>
               </div>
               <div class="col-12 col-lg-6 centered pr-0">
-                <h3 class="mr-3">What can we do for your business</h3>
+                <h3 class="mr-3">What can we do for your business?</h3>
                 <a href="/portfolio.html" class="d-inline-block btn btn-orange">Get in touch</a>
               </div>
             </div>
