--- a/app/services.html
+++ b/app/services.html
@@ -133,7 +133,7 @@
             </figure></a>
             <div class="service-text">
               <span class="small-grey-text">Conversion rate optimisation</span>
-              <h3>Persuade customers to say yes before they say no</h3>
+              <h3>Highly targeted campaigns for a higher ROI</h3>
               <a href="/cro.html" class="btn btn-orange">Learn more</a>
             </div>
           </div>
