--- a/app/shortlisted-european.html
+++ b/app/shortlisted-european.html
@@ -98,7 +98,10 @@
             <p>Negligence Claimline was born from an idea that only existed in the mind of a doctor but with no brand, website, marketing plan or knowledge of a deeply competitive market our challenge was to create a viable business structure that would differentiate our client from the competition.  Our research and strategy paid off as the client now stands apart as someone that went against a strong industry mentality and successfully emerged despite all the “right” norms, overcoming goal after goal. </p>
             <p>It’s a big achievement to be nominated alongside the very best in our industry and we’re looking forward to the awards final on the 27th of April in Krakow, Poland.</p>
             <p>With our experience and proven track record, we are the ideal partner for anyone looking to take their business forward. For an informal chat about your digital strategy and how we can help, contact us online or call today on 0114 272 2444.  </p>
+            <p class="text-center mt-5"><a class="breadcrumbs small-grey-text" href="/advice-center.html">&lt; Back to Advice Center</a></p>
+            
             </div>
+
           </div>
         </div>
     </section>
