--- a/app/shortlisted-northern.html
+++ b/app/shortlisted-northern.html
@@ -97,6 +97,7 @@
             <p>Answering to millions of search queries, shopping ads have significantly improved the way consumers shop, making Google Shopping an increasingly important channel for driving eCommerce revenue. Our ability to greatly improve and enhance the quality of the product feed, were key success factors in achieving a revenue of over £1 million in June alone from a £45k budget, proving the efficiency of this channel when everything is done right. </p>
             <p>The awards will take place on 11 October during the eCommerce Show North and will be the North’s biggest celebration of success and talent across e-retailing and online business.  We’ll keep you posted! </p>
             <p>With our experience and proven track record, we are the ideal partner for anyone looking to take their business forward. For an informal chat about your digital strategy and how we can help, contact us online or call today on 0114 272 2444. </p>
+            <p class="text-center mt-5"><a class="breadcrumbs small-grey-text" href="/advice-center.html">&lt; Back to Advice Center</a></p>
             </div>
           </div>
         </div>
