--- a/app/united-carpets.html
+++ b/app/united-carpets.html
@@ -70,7 +70,7 @@
           <div class="bg-black"></div>
           <figure><img class="cover img-fluid" src="images/case-studies/united.jpg" alt=""></figure>
           <div class="container p-absolute">
-            <div class="service-content text-center">
+            <div class="service-content text-center"><a class="breadcrumbs small-grey-text" href="/work.html">&lt; Back to Our Work</a>
               <h2>United Carpets</h2>
             </div>
           </div>
@@ -85,10 +85,10 @@
           <div class="row justify-content-md-center">
             <div class="col-12 col-lg-6 centered column bordered">
               <h3 class="mb-5">Increase conversions month on month by 150%. </h3>
-                <p class="grey dash-before">United Carpets & Beds is a supplier of carpets, beds and flooring. Having recently migrated to transactional, the company joined forces with Ignition to focus on increasing its online traffic as well as in-store visits.</p>
+                <p class="dash-before text-left">United Carpets & Beds is a supplier of carpets, beds and flooring. Having recently migrated to transactional, the company joined forces with Ignition to focus on increasing its online traffic as well as in-store visits.</p>
               </div>
               <div class="col-12 col-lg-6 centered column">
-                <h3>What can we do for your business</h3>
+                <h3>What can we do for your business?</h3>
                 <a href="#" class="d-inline-block btn btn-orange">Get in touch</a>
               </div>
             </div>
@@ -101,7 +101,7 @@
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-11 col-sm-10 col-md-8 center-vert">
-                <h3 class="case-title">Pains?</h3>
+                <h3 class="case-title">Pains</h3>
                 <ul class="description">
                   <li>Reaching target demographics in higher volumes</li>
                   <li>Competitive market</li>
@@ -117,7 +117,7 @@
         <section class="solution testimonial">
           <div class="container">
           <div class="row no-gutters justify-content-center">
-              <div class="col-11 col-sm-10 col-md-8">
+              <div class="col-11 col-sm-10">
                 <p> “Going transactional and tapping into new markets, it was essential that our existing and new customers could identify with our products and company values. Ignition has proved invaluable with unparalleled attention to detail, always delivering the best results and exceeding our expectations.” </p>
                 <p class="author"><strong>Richard Sim, </strong> Digital Manager, United carpets and beds</p>
               </div>
