--- a/app/abaris-international.html
+++ b/app/abaris-international.html
@@ -70,7 +70,7 @@
           <div class="bg-black"></div>
           <figure><img class="cover img-fluid" src="images/case-studies/abaris.jpg" alt=""></figure>
           <div class="container p-absolute">
-            <div class="service-content text-center">
+            <div class="service-content text-center"><a class="breadcrumbs small-grey-text" href="/work.html">&lt; Back to Our Work</a>
               <h2>Abaris International</h2>
             </div>
           </div>
@@ -85,10 +85,10 @@
           <div class="row justify-content-md-center">
             <div class="col-12 col-lg-6 centered column bordered">
               <h3 class="mb-5">ROI of £28.53 for every pound spent in AdWords.</h3>
-                <p class="grey dash-before">Based at the edge of Peak District, Abaris International is one of the leading suppliers of technical equipment and apparel for the outdoor professional. In a quest to increase online performance and ROI, the company enlisted our help in shaping and reforming its paid search advertising accounts. </p>
+                <p class="dash-before text-left">Based at the edge of Peak District, Abaris International is one of the leading suppliers of technical equipment and apparel for the outdoor professional. In a quest to increase online performance and ROI, the company enlisted our help in shaping and reforming its paid search advertising accounts. </p>
               </div>
               <div class="col-12 col-lg-6 centered column">
-                <h3>What can we do for your business</h3>
+                <h3>What can we do for your business?</h3>
                 <a href="#" class="d-inline-block btn btn-orange">Get in touch</a>
               </div>
             </div>
@@ -101,7 +101,7 @@
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-11 col-sm-10 col-md-8 center-vert">
-                <h3 class="case-title">Pains?</h3>
+                <h3 class="case-title">Pains</h3>
                 <ul class="description">
                   <li>Low brand visibility </li>
                   <li>Low return on investment (ROI) </li>
