--- a/app/exhibiting.html
+++ b/app/exhibiting.html
@@ -103,6 +103,8 @@
             </ul>
             <p>eCommerce Show will feature the biggest names in the industry with seminars, expert speakers, networking rooms, workshops, demos and more. Want to see us there? You can find us at stand 107. Sign up for <a href="https://goo.gl/M5Uj6L" target="_blank"> FREE</a> today. </p>
             <p>With our experience and proven track record, we are the ideal partner for anyone looking to take their business forward. For an informal chat about your digital strategy and how we can help, contact us online or call today on 0114 272 2444.  </p>
+
+            <p class="text-center mt-5"><a class="breadcrumbs small-grey-text" href="/advice-center.html">&lt; Back to Advice Center</a></p>
             </div>
           </div>
         </div>
