--- a/app/origin-global.html
+++ b/app/origin-global.html
@@ -70,7 +70,7 @@
           <div class="bg-black"></div>
           <figure><img class="cover img-fluid" src="images/case-studies/origin-global.jpg" alt=""></figure>
           <div class="container p-absolute">
-            <div class="service-content text-center">
+            <div class="service-content text-center"><a class="breadcrumbs small-grey-text" href="/work.html">&lt; Back to Our Work</a>
               <h2>Origin Global</h2>
             </div>
           </div>
@@ -85,10 +85,10 @@
           <div class="row justify-content-md-center">
             <div class="col-12 col-lg-6 centered column bordered">
               <h3 class="mb-5">Driving the business forward following a complex Google Penalty </h3>
-                <p class="grey dash-before">Origin are the UK’s leading manufacturer of bespoke aluminium Bi-folding doors. With offices in the UK, US and UAE, they are one of the fastest growing companies in the UK</p>
+                <p class="dash-before text-left">Origin are the UK’s leading manufacturer of bespoke aluminium Bi-folding doors. With offices in the UK, US and UAE, they are one of the fastest growing companies in the UK</p>
               </div>
               <div class="col-12 col-lg-6 centered column">
-                <h3>What can we do for your business</h3>
+                <h3>What can we do for your business?</h3>
                 <a href="#" class="d-inline-block btn btn-orange">Get in touch</a>
               </div>
             </div>
@@ -101,7 +101,7 @@
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-11 col-sm-10 col-md-8 center-vert">
-                <h3 class="case-title">Why?</h3>
+                <h3 class="case-title">Pains</h3>
                 <ul class="description">
                   <li>Huge drop in organic ranking and traffic overnight </li>
                   <li>Low conversion rates</li>
@@ -131,7 +131,7 @@
          <section class="solution testimonial">
           <div class="container">
           <div class="row no-gutters justify-content-center">
-              <div class="col-11 col-sm-10 col-md-8">
+              <div class="col-11 col-sm-10">
                 <p>“Ignition have been outstanding. Not only have they delivered fantastic ROI from our Adwords spend, they have recovered us from a complex Google penalty.”</p>
                 <p class="author"><strong>Ben Brocklesby, </strong>Marketing Director, Origin </p>
               </div>
