--- a/app/work.html
+++ b/app/work.html
@@ -111,7 +111,7 @@
             <div class="service-text">
               <span class="small-grey-text">Captain Cover</span>
               <h3>162% increase in conversion rate. </h3>
-              <p><strong>Project services:</strong> Pay Per Click</p>
+              <p><strong>Project services:</strong> PPC</p>
               <a href="captain-cover.html" class="btn btn-orange">Learn more</a>
             </div>
           </div>
@@ -135,7 +135,7 @@
             <div class="service-text">
               <span class="small-grey-text">CMD</span>
               <h3>Maintaining and raising the company’s online profile throughout a rebranding process.</h3>
-              <p><strong>Project services:</strong> Search Engine Optimisation, PR</p>
+              <p><strong>Project services:</strong> SEO, PR</p>
               <a href="cmd.html" class="btn btn-orange">Learn more</a>
             </div>
           </div>
@@ -148,7 +148,7 @@
             <div class="service-text">
               <span class="small-grey-text">Origin global</span>
               <h3>Driving the business forward following a complex Google penalty. </h3>
-              <p><strong>Project services:</strong> Search Engine Optimisation, Pay Per Click</p>
+              <p><strong>Project services:</strong> SEO, PPC</p>
               <a href="/origin-global.html" class="btn btn-orange">Learn more</a>
             </div>
           </div>
@@ -161,7 +161,7 @@
             <div class="service-text">
               <span class="small-grey-text">Jackson Woodturners </span>
               <h3>ROI of £19.44 for every pound spent in AdWords. </h3>
-              <p><strong>Project services:</strong> Search Engine Optimisation, Pay Per Click</p>
+              <p><strong>Project services:</strong> SEO, PPC</p>
               <a href="/jackson-woodturners.html" class="btn btn-orange">Learn more</a>
             </div>
           </div>
@@ -174,7 +174,7 @@
             <div class="service-text">
               <span class="small-grey-text">Kitlocker </span>
               <h3>286% increase in ecommerce revenue. </h3>
-              <p><strong>Project services:</strong> Search Engine Optimisation, Pay Per Click</p>
+              <p><strong>Project services:</strong> SEO, PPC</p>
               <a href="/kitlocker.html" class="btn btn-orange">Learn more</a>
             </div>
           </div>
@@ -187,7 +187,7 @@
             <div class="service-text">
               <span class="small-grey-text">Russums  </span>
               <h3>– Delivering 25% increase year – on – year in organic traffic. </h3>
-              <p><strong>Project services:</strong> Search Engine Optimisation, Pay Per Click</p>
+              <p><strong>Project services:</strong> SEO, PPC</p>
               <a href="/russums.html" class="btn btn-orange">Learn more</a>
             </div>
           </div>
@@ -200,7 +200,7 @@
             <div class="service-text">
               <span class="small-grey-text">Datatrack Labs</span>
               <h3>887.50% YOY increase in goal completions.</h3>
-              <p><strong>Project services:</strong> Search Engine Optimisation, Pay Per Click</p>
+              <p><strong>Project services:</strong> SEO, PPC</p>
               <a href="/datatrack-labs.html" class="btn btn-orange">Learn more</a>
             </div>
           </div>
@@ -213,7 +213,7 @@
             <div class="service-text">
               <span class="small-grey-text">Abaris International </span>
               <h3>ROI of £28.53 for every pound spent in AdWords.</h3>
-              <p><strong>Project services:</strong> Pay Per Click</p>
+              <p><strong>Project services:</strong> PPC</p>
               <a href="/abaris-international.html" class="btn btn-orange">Learn more</a>
             </div>
           </div>
@@ -227,7 +227,7 @@
             <div class="service-text">
               <span class="small-grey-text">United Carpets </span>
               <h3>Increase conversions month on month by 150%.</h3>
-              <p><strong>Project services:</strong> Pay Per Click</p>
+              <p><strong>Project services:</strong> PPC</p>
               <a href="/united-carpets.html" class="btn btn-orange">Learn more</a>
             </div>
           </div>
